objects/SFDocumentor__Apex_Class__c.object
<CustomObject>
    <description>Collection of all Apex Classes available in current Org</description>
    <fields>
        <fullName>SFDocumentor__ApiVersion__c</fullName>
        <label>Api Version</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__BodyCrc__c</fullName>
        <inlineHelpText>This field represent total count of apex class has been updated or altered which will help you to analyze on which class most of the work have happened.</inlineHelpText>
        <label>BodyCrc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Class_Id__c</fullName>
        <externalId>true</externalId>
        <label>Class Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apex_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether any dependent metadata has changed since the class was last compiled (true) or not (false). The default value is false.</description>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Is_Without_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Without Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apex_Classes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LengthWithoutComments__c</fullName>
        <label>Length Without Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__NamespacePrefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SystemModstamp__c</fullName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Class_Length__c</fullName>
        <label>Total Class Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Apex Class Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__ApiVersion__c</columns>
        <columns>SFDocumentor__IsActive__c</columns>
        <columns>SFDocumentor__LengthWithoutComments__c</columns>
        <columns>SFDocumentor__Is_Without_Comments__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Apex Class Collection</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Class Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>